--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 *.iml
 .gradle
 /local.properties
+/.idea/caches/build_file_checksums.ser
 /.idea/libraries
+/.idea/misc.xml
 /.idea/modules.xml
+/.idea/vcs.xml
 /.idea/workspace.xml
 .DS_Store
 /build
