--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,12 +28,14 @@ android {
 
 def moshiVersion = '1.6.0'
 def retrofitVersion = '2.4.0'
+def supportLibraryVersion = '28.0.0-rc01'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation "com.android.support:recyclerview-v7:$supportLibraryVersion"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
