Fixed remote API by adding API key interceptor
This interceptor was coded in Java for now because Kotlin was
complaining about absolutely everything being optional, and even the
input parameter was optional while the output had to be non-optional...
Not to mention the ugly syntax for anonymous classes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,11 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField 'String', "ApiKey", TMDBApiKey
+        }
         release {
+            buildConfigField 'String', "ApiKey", TMDBApiKey
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
