--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "me.gobetti.codechallenge.TestInstrumentationRunner"
     }
     buildTypes {
         debug {
@@ -24,11 +24,25 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        final String sharedTestDir = 'src/sharedTest'
+        final String sharedTestJavaDir = "$sharedTestDir/java"
+        final String sharedTestResourcesDir = "$sharedTestDir/resources"
+        test {
+            java.srcDir sharedTestJavaDir
+            resources.srcDir sharedTestResourcesDir
+        }
+        androidTest {
+            java.srcDir sharedTestJavaDir
+            resources.srcDir sharedTestResourcesDir
+        }
+    }
 }
 
 def moshiVersion = '1.6.0'
 def retrofitVersion = '2.4.0'
 def supportLibraryVersion = '28.0.0-rc01'
+def supportTestVersion = '1.0.2'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -45,7 +59,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'com.squareup.okhttp3:mockwebserver:3.8.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.8.0'
 
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation "com.android.support.test:rules:$supportTestVersion"
+    androidTestImplementation "com.android.support.test:runner:$supportTestVersion"
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
