--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
     }
 }
 
+def espressoVersion = '3.0.2'
 def moshiVersion = '1.6.0'
 def retrofitVersion = '2.4.0'
 def supportLibraryVersion = '28.0.0-rc01'
@@ -63,5 +64,6 @@ dependencies {
 
     androidTestImplementation "com.android.support.test:rules:$supportTestVersion"
     androidTestImplementation "com.android.support.test:runner:$supportTestVersion"
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
 }
