--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,3 +68,11 @@ dependencies {
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'com.android.support') {
+            details.useVersion supportLibraryVersion
+        }
+    }
+}
